# Vulkan_Development

./: .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: .gitignore  main.cpp.44D9AF32DC2934B2.idx
cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake-build/.cmake/api/v1/reply/: cache-v2-c044f7d582ebb25487b8.json  cmakeFiles-v1-450a4a2d24a6bfdee47f.json  codemodel-v2-523dfbb50401bdc9b136.json  index-2026-04-27T10-53-28-0768.json  target-CompileShaders-Debug-dc7f010488bf6ae00dd3.json  target-Threads__Threads-Debug-4b1eef1544bfcd6e146e.json  target-Vulkan__Headers-Debug-7f3ac2068d1bb169de81.json  target-Vulkan__Vulkan-Debug-bf6f32adc46a9dd2024f.json  target-Vulkan__glslangValidator-Debug-ce68f41b4cedbbc9735b.json  target-Vulkan__glslc-Debug-631cdea281ebce964abb.json  target-glfw-Debug-6cd31babd07c7a247401.json  target-main-Debug-bcf5a0f7055b582bde3c.json
shaders/: shader.slang  slang.spv
src/: main.cpp
